pegaworld22/src/customstyles/_layout.scss
app-root {
    display: flex;
    flex-wrap: wrap;
    height: 100vh;
    width: 100%;
    align-content: flex-start;
    align-items: stretch;
    header {
        flex-basis: 100%;
        background-color: #fff;
        padding: 5px $default-gutter;
        border-bottom: $border;
        max-height: 60px;
    }
    aside {
        background-color: $background-color-navigation;
        max-width: 90px;
        flex: 1;
        padding: $default-gutter;
        min-height: 100%;
        @media(max-width: $size-l) {
            height: 80px;
            max-width: unset;
            width: 100%;
            flex-basis: 100%;
        }
    }
    main {
        background-color: $background-color;
        flex-grow: 1;
        width: calc(100% - 90px);
    }
}

